@@ -4,7 +4,7 @@
 .SH NAME
 pslegend \- To plot a map legend
 .SH SYNOPSIS
-BD(pslegend) [ IT(textfile) ] OPT(D)[BD(x)]IT(lon)/IT(lat)/IT(width)/IT(height)/IT(just) 
+BD(pslegend) [ IT(textfile) ] OPT(D)[BD(x)]IT(lon)/IT(lat)/IT(width)/IT(height)/IT(just)[/IT(dx)/IT(dy)] 
 [ GMT_B_OPT ] [ OPT(C)IT(dx)/IT(dy) ] [ OPT(F) ] [ OPT(G)IT(fill) ] [ GMT_J_OPT ] 
 [ GMT_K_OPT ] [ OPT(L)IT(spacing) ] [ GMT_O_OPT ] [ GMT_P_OPT ] 
 [ GMT_Rgeo_OPT ] [ GMT_U_OPT ] [ GMT_V_OPT ] [ GMT_X_OPT ] [ GMT_Y_OPT ] 
@@ -105,11 +105,12 @@ at their default value to BD(-).
 .RE
 .br
 .TP
-OPT(D)[BD(x)]IT(lon)/IT(lat)/IT(width)/IT(height)/IT(just)
+OPT(D)[BD(x)]IT(lon)/IT(lat)/IT(width)/IT(height)/IT(just)[/IT(dx)/IT(dy)] 
 Positions the legend and specifies its size.  The IT(just) is a 2-char justification string (see BD(pstext))
 that relates the given position to a point on the rectangular legend box.  If you want to specify the position
 in map plot units (i.e., inches or cm), use OPT(Dx); in that case the OPT(R) and OPT(J) are optional (provided
-it is an overlay, i.e., we are using OPT(O)).
+it is an overlay, i.e., we are using OPT(O)).  Use to optional IT(dx)/IT(dy) to shift the legend by that amount
+in the direction implied by the justification.
 #include "explain_-B.txt"
 .TP
 OPT(C)IT(dx)/IT(dy)
