@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.1102 2011-06-20 15:15:25 remko Exp $
+	$Id: ChangeLog,v 1.1103 2011-06-20 20:41:01 guru Exp $
 -----------------------------------------------------------------------------------------
 
 2011-06-20	remko
@@ -8,6 +8,7 @@
 2011-06-19	pwessel
 	* *.c:			Eliminated DIR_DELIM since '/' works for all systems.
 				Added WIN32 check to turn /x/dir into x:/dir paths
+	* pslegend_func.c:	Enhanced -D to allow for clever offsets away from given origin.
 
 2011-06-18	pwessel
 	* grdpaste_func.c:	Fixed porting bugs, JL added test case that now works.
